<resources>
    <string name="app_name">MyHome_CN</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_show_device">ShowDeviceActivity</string>
    <string name="title_activity_show_group">ShowGroupActivity</string>
    <string name="title_activity_user">SetUserActivity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_capture">CaptureActivity</string>
    <string name="title_activity_show_trigger">ShowTriggerActivity</string>
    <string name="title_activity_show_record">ShowRecordActivity</string>
    <string name="title_activity_play_video">PlayVideoActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_monitoring">MonitoringActivity</string>
    <string name="title_activity_config_gateway">ConfigGatewayActivity</string>
    <string name="title_activity_chart">ConfigChartActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_show_hts_trigger">ShowHtsTriggerActivity</string>
    <string name="update_scene">更新场景</string>
    <string name="update_schedule">更新定时</string>
    <string name="add_scene">添加场景</string>
    <string name="add_device">添加设备</string>
    <string name="add_schedule">添加定时</string>
    <string name="add_trigger">添加触发</string>
    <string name="update_trigger">更新触发</string>
    <string name="add_failure">添加失败</string>
    <string name="username_not_null">用户名不能为空</string>
    <string name="username_format_error">用户名包含非法字符</string>
    <string name="old_password_format_error">旧密码包含非法字符</string>
    <string name="new_password_format_error">新密码包含非法字符</string>
    <string name="password_not_null">密码不能为空</string>
    <string name="password_length_eng">密码长度不能小于8</string>
    <string name="please_try_again">请重置网关并重试!</string>
    <string name="yes">确认</string>
    <string name="password_length_error">密码至少5位</string>
    <string name="new_password_not_null">新密码不能为空</string>
    <string name="new_password_length_error">新密码至少5位</string>
    <string name="password_format_error">密码包含非法字符</string>
    <string name="activate_code_format_error">激活码包含非法字符</string>
    <string name="two_assword_not_fit">两次密码不一致</string>
    <string name="email_not_null">邮箱不能为空</string>
    <string name="email_format_error">邮箱格式错误</string>
    <string name="activate_success">激活成功</string>
    <string name="activate">激活</string>
    <string name="login">登录</string>
    <string name="activate_user">激活用户</string>
    <string name="activate_success_is_login">激活成功 ! 是否立即登录 ?</string>
    <string name="reset_password_success_is_login">重置密码成功 ! 是否立即登录 ?</string>
    <string name="register_failure">注册失败</string>
    <string name="alter_time_out">修改超时</string>
    <string name="delete_time_out">删除超时</string>
    <string name="activate_failure">激活失败</string>
    <string name="register_success_hint_msg">注册成功 ! \n 我们已经将激活码发到您的邮箱, 请注意查收 !</string>
    <string name="activate_code_not_null">激活码不能为空</string>
    <string name="forgot_code_not_null">恢复码不能为空</string>
    <string name="remember_me">记住密码</string>
    <string name="login_time_out">登录超时</string>
    <string name="register_time_out">注册超时</string>
    <string name="activate_time_out">激活超时</string>
    <string name="please_enter_the_recovery">恢复码</string>
    <string name="please_enter_the_password">密码</string>
    <string name="please_enter_the_two_password">确认密码</string>
    <string name="please_enter_the_email">邮箱</string>
    <string name="please_enter_the_old_password">旧密码</string>
    <string name="please_enter_the_new_password">新密码</string>
    <string name="please_enter_the_activate_code">激活码</string>
    <string name="old_password_not_null">旧密码不能为空</string>
    <string name="old_password_length_error">旧密码至少5位</string>
    <string name="activate_code_length_error">激活码至少3位</string>
    <string name="change_password_title">修改密码</string>
    <string name="change_password"><u>修改密码</u></string>
    <string name="forget_password">忘记密码</string>
    <string name="create_account"><u>注册新用户</u></string>
    <string name="alter">修改</string>
    <string name="login_token_is_null">登录密钥为空</string>
    <string name="username_or_password_is_null">用户名或密码为空</string>
    <string name="you_not_checked_device">您还没有选中设备</string>
    <string name="restart_login_failure">重新登录失败</string>
    <string name="login_failure">登录失败</string>
    <string name="restart_login_success">重新登录成功</string>
    <string name="token_lapsed_restart_login_start">密钥失效,正在帮您重新登录...</string>
    <string name="account_devics_is_null">您的帐号没有设备</string>
    <string name="exit_current_user">您确定要退出当前帐号吗 ?</string>
    <string name="exit_user">退出帐号</string>
    <string name="register">注册</string>
    <string name="local">本地</string>
    <string name="register_user">注册用户</string>
    <string name="failure">失败</string>
    <string name="exit">退出</string>
    <string name="you_confirm_exit_app">您确定要退出 APP 吗 ?</string>
    <string name="exit_app">退出程序</string>
    <string name="send_add_command_to_gateway_failure">向网关发送添加命令失败</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="add">添加</string>
    <string name="update">更新</string>
    <string name="device_name">设备名称 :</string>
    <string name="custom_name">定义名称 :</string>
    <string name="please_input_gateway_password">请输入网关密码</string>
    <string name="please_input_device_name">请输入设备名称</string>
    <string name="please_input_network_key">请输入network key</string>
    <string name="main">设备</string>
    <string name="scene">场景</string>
    <string name="group">组</string>
    <string name="schedule">定时</string>
    <string name="me">我</string>
    <string name="navigation_me">我</string>
    <string name="navigation_main">设备</string>
    <string name="navigation_scene">场景</string>
    <string name="navigation_group">组</string>
    <string name="navigation_schedule">定时</string>
    <string name="device_offline">设备掉线</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="you_scene_code_is_none">您的已经 scene code 已经用完 </string>
    <string name="childinfo_error">网关 childInfo 错误</string>
    <string name="conver_data_error">解析数据错误</string>
    <string name="network_disconnect">网络中断,请检查网络设置</string>
    <string name="alter_success">修改成功</string>
    <string name="alter_failure">修改失败</string>
    <string name="alter_name">修改名称</string>
    <string name="alter_network_key">修改Network Key</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failure">删除失败</string>
    <string name="dimmer">亮度 :</string>
    <string name="start_time">开始时间 :</string>
    <string name="end_time">结束时间 :</string>
    <string name="select">查询</string>
    <string name="select_success">查询成功</string>
    <string name="select_failure">查询失败</string>
    <string name="not_historical_record">没有历史记录</string>
    <string name="historical_record">历史记录</string>
    <string name="time">时间</string>
    <string name="number_value">数值</string>
    <string name="date">日期 :</string>
    <string name="enable">启用 :</string>
    <string name="repetition">重复 :</string>
    <string name="designation">名称 :</string>
    <string name="switch_0">开关0 :</string>
    <string name="switch_1">开关1 :</string>
    <string name="low">低 :</string>
    <string name="hig">高 :</string>
    <string name="cover">覆盖 :</string>
    <string name="name">名称</string>
    <string name="load_data">正在加载...</string>
    <string name="load_time_out">加载超时</string>
    <string name="load_failure">加载失败</string>
    <string name="humidity">湿度</string>
    <string name="temperature">温度</string>
    <string name="add_time_out">添加超时</string>
    <string name="update_success">更新成功</string>
    <string name="update_failure">更新失败</string>
    <string name="reset_failure">重置失败</string>
    <string name="is_the_login">正在登录 ...</string>
    <string name="is_the_register">正在注册...</string>
    <string name="is_the_activate">正在激活...</string>
    <string name="is_the_alter">正在修改...</string>
    <string name="is_the_update">正在更新...</string>
    <string name="is_the_send">正在发送...</string>
    <string name="is_the_add">正在添加...</string>
    <string name="is_the_sync">正在同步...</string>
    <string name="is_the_delete">正在删除...</string>
    <string name="is_the_reset_password">正在重置...</string>
    <string name="reset_password">重置密码</string>
    <string name="reset">重置</string>
    <string name="send">发送</string>
    <string name="action_success">操作成功</string>
    <string name="action_failure">操作失败</string>
    <string name="reset_success">重置成功</string>
    <string name="send_success">发送成功</string>
    <string name="send_failure">发送失败</string>
    <string name="you_do_not_make_any_change">您未做任何改变</string>
    <string name="time_out">超时</string>
    <string name="add_success">添加成功</string>
    <string name="delete_scene_title">删除场景</string>
    <string name="delete_group_title">删除组</string>
    <string name="confirm_delete_scene">您确定要删除场景吗?</string>
    <string name="confirm_delete_group">您确定要删除组吗?</string>
    <string name="delete_schedule">删除定时</string>
    <string name="confirm_delete_schedule_msg">您确定要删除定时吗?</string>
    <string name="update_time_out">更新超时</string>
    <string name="success">成功</string>
    <string name="device_not_support_add_trigger">该设备暂不支持添加触发</string>
    <string name="device_not_support_hereon_edit">该设备暂不支持在此编辑</string>
    <string name="delete_device">删除设备</string>
    <string name="delete">删除</string>
    <string name="confirm_delete_device">您确定要删除这个设备吗?</string>
    <string name="scene_code_period">设备码不足,无法添加场景</string>
    <string name="bind_device_failure">绑定设备失败</string>
    <string name="network_no_good_bind_devices_error">网络不给力, 有一部分设备绑定失败了</string>
    <string name="not_gateway_not_add_schudule">您还没有网关,所以不能添加定时</string>
    <string name="temporary_not_support_update_scene">此设备暂不支持更新场景</string>
    <string name="scan_device_hint_msg">将取景框对准二维码可自动扫描!</string>
    <string name="not_detection_scan_data">未检测到扫描数据</string>
    <string name="device_already_add">该设备已经被添加</string>
    <string name="scan_device">扫描设备</string>
    <string name="close">关闭</string>
    <string name="unknown_error">未知错误</string>
    <string name="device_name_not_null">名称不能为空</string>
    <string name="send_reset_password_to_email_hint">我们将会发送恢复码到您的邮箱,您可凭邮箱的恢复码重置密码!</string>
    <string name="not_recording_because_sdcard_not_find">你的手机没有SD卡,暂时无法录制</string>
    <string name="memory_capacity_insufficient">手机内存不足</string>
    <string name="you_phone_not_support_play_current_format">您的手机不支持当前播放格式</string>
    <string name="snapshot_success">快照成功</string>
    <string name="you_not_snapshot">您还没有快照</string>
    <string name="snapshot_list">快照列表</string>
    <string name="recording_list">录像列表</string>
    <string name="look_recording">查看录像</string>
    <string name="look_snapshot">查看快照</string>
    <string name="recording">录制中..</string>
    <string name="stop_recording">已停止录制</string>
    <string name="calling">对讲中..</string>
    <string name="visual_angle_one">视角1</string>
    <string name="visual_angle_two">视角2</string>
    <string name="visual_angle_three">视角3</string>
    <string name="visual_angle_four">视角4</string>
    <string name="visual_angle_hint">提示：1.点击移动视角 2.长按保存视角</string>
    <string name="chart">图表</string>
    <string name="database_update">数据发生改变点击进行同步</string>
    <string name="group_name">组名:</string>
    <string name="group_name_hint">请输入组名</string>
    <string name="group_select_devices">请选择设备:</string>
    <string name="config_wifi_name">1.当前wifi是: </string>
    <string name="config_wifi_guide">它是您要设置的wifi吗?如果不是请</string>
    <string name="config_wifi_setting">去设置</string>
    <string name="config_wifi_next">下一步</string>
</resources>