<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center"
    android:padding="5dp">
    
    
    <TextView 
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visual_angle_hint"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">
	    <Button 
	        android:id="@+id/dialogVisualAngleOne"
	        android:textSize="12sp"
	        android:layout_marginRight="5dp"
	        android:textColor="@color/white"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/visual_angle_one"
	        android:background="@drawable/selector_base_btn"/>
	        
	    <Button 
	        android:id="@+id/dialogVisualAngleTwo"
	        android:textSize="12sp"
	        android:layout_marginRight="5dp"
	        android:textColor="@color/white"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/visual_angle_two"
	        android:background="@drawable/selector_base_btn"/>
	        
	    <Button 
	        android:id="@+id/dialogVisualAngleThree"
	        android:textSize="12sp"
	        android:layout_marginRight="5dp"
	        android:textColor="@color/white"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/visual_angle_three"
	        android:background="@drawable/selector_base_btn"/>
	        
	    <Button 
	        android:id="@+id/dialogVisualAngleFour"
	        android:textSize="12sp"
	        android:textColor="@color/white"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/visual_angle_four"
	        android:background="@drawable/selector_base_btn"/>
    </LinearLayout>
    

</LinearLayout>
