<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingLeft="20dp"
    android:paddingRight="20dp">
    
    
    <EditText
        android:textSize="15sp"
        android:hint="@string/please_enter_the_email"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:id="@+id/fragAlterPasswordEmailEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLength="20" />

    <EditText
        android:textSize="15sp"
        android:hint="@string/please_enter_the_old_password"
        android:password="true"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:id="@+id/fragAlterOldPasswordEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLength="20"/>
    
    
    <EditText
        android:textSize="15sp"
        android:hint="@string/please_enter_the_new_password"
        android:password="true"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:id="@+id/fragAlterOneNewPasswordEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLength="20"/>    
    
    <EditText
        android:textSize="15sp"
        android:hint="@string/please_enter_the_two_password"
        android:paddingLeft="10dp"
        android:password="true"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:id="@+id/fragAlterTwoNewPasswordEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLength="20"/>

</LinearLayout>
