<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
        <TextView 
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historical_record"/>
        
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >

	        <TextView
	            android:gravity="center"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/time"/>

	        <TextView
	            android:gravity="center"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/number_value"/>
	    </LinearLayout>
	    
        <ListView 
            android:divider="#00000000"
		    android:dividerHeight="0dp"
		    android:listSelector="@android:color/transparent" 
            android:id="@+id/includeHistoryListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    

</LinearLayout>
