<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingLeft="20dp"
    android:paddingRight="20dp">
    
    
    <EditText
        android:textSize="15sp"
        android:hint="@string/please_enter_the_email"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:id="@+id/fragRegisterUserEmailEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLength="30"/>  


    <EditText
        android:textSize="15sp"
        android:hint="@string/please_enter_the_password"
        android:password="true"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:id="@+id/fragRegisterUserOnePassEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLength="20"/>
    
    
    <EditText
        android:textSize="15sp"
        android:hint="@string/please_enter_the_two_password"
        android:password="true"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:id="@+id/fragRegisterUserTwoPassEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLength="20"/>    
    

 

</LinearLayout>
