<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/actionbar_gateway_config"/>

    <TextView
        android:id="@+id/wifi_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/wifi_ssid"
        android:layout_marginLeft="20dp"
        android:text="@string/config_wifi_name"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/wifi_ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/wifi_name_setview"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/baby_blue"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/wifi_name_setview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_centerVertical="true"
        android:text="@string/config_wifi_guide"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/wifi_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wifi_name_setview"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/config_wifi_setting"
        android:textColor="@color/white"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/selector_base_btn"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/next_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/config_wifi_next"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textSize="20sp"
        android:background="@drawable/selector_base_btn"
        android:layout_alignParentBottom="true"
        android:gravity="center"/>

</RelativeLayout>