<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">
    
    <EditText
        android:textSize="15sp"
        android:layout_alignParentTop="true"
        android:id="@+id/fragForgotPasswordCodeEdit"
        android:hint="@string/please_enter_the_recovery"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLength="30" />

    <EditText
        android:textSize="15sp"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:id="@+id/fragForgotPasswordEmailEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/fragForgotPasswordCodeEdit"
        android:hint="@string/please_enter_the_email"
        android:maxLength="30" />

    <EditText
        android:textSize="15sp"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:id="@+id/fragForgotPasswordPassEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/fragForgotPasswordEmailEdit"
        android:hint="@string/please_enter_the_new_password"
        android:maxLength="30"
        android:password="true" />


</RelativeLayout>
